# PharmaGraphRAG

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: Interactive.agent.md
.github/workflows/: ci.yml
docker/: Dockerfile.api  Dockerfile.ui
docs/: 01_architecture_and_concepts.md  02_data_pipeline.md  03_knowledge_graphs_neo4j.md  04_embeddings_and_vector_search.md  05_python_modern_tooling.md  06_query_engine_and_llm.md  07_api_and_ui.md  plan.md
notebooks/: .gitkeep
scripts/: load_vectorstore.py  validate_search.py
src/pharmagraphrag/: __init__.py  config.py
src/pharmagraphrag/api/: __init__.py  main.py  models.py
src/pharmagraphrag/data/: __init__.py  clean_faers.py  download_faers.py  ingest_dailymed.py
src/pharmagraphrag/engine/: __init__.py  entity_extractor.py  query_engine.py  retriever.py
src/pharmagraphrag/graph/: __init__.py  loader.py  queries.py  schema.py
src/pharmagraphrag/llm/: __init__.py  client.py
src/pharmagraphrag/ui/: __init__.py  app.py  components.py
src/pharmagraphrag/vectorstore/: __init__.py  chunker.py  embedder.py  store.py
tests/: test_api.py  test_clean_faers.py  test_download_faers.py  test_engine.py  test_ingest_dailymed.py  test_llm.py  test_ui.py  test_vectorstore.py
